# price-parser

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  PUBLIC_REPOSITORY.md  README.md  alembic.ini  pyproject.toml  requirements-backend.txt  requirements-llm.txt  requirements.txt
docs/: BACKEND_API_V0_5_0_RC1.md  COMMERCIAL_DOCUMENTS_V0_7_0_RC2.md  DATABASE_SCHEMA_V0_5_0_RC1.md  DOMAIN_ROUTING.md  GITHUB_HANDOFF.md  KNOWN_LIMITATIONS_V0_7_1_RC4.md  LLM_ACCESS_POLICY.md  LLM_SAFE_PIPELINE.md  MAIL_PIPELINE_V0_6_0_RC1.md  NOMENCLATURE_PROFILE_RULES.md  OPERATOR_REVIEW.md  SEARCH_ARCHITECTURE.md  SEARCH_DATA_FORMAT.md
examples/: operator_review_items.example.jsonl  search_inventory.example.jsonl
pilot/: README.md  pilot_gold_v0_7_1_rc3.jsonl
tests/: test_assignment_readiness.py  test_commercial_documents.py  test_db_api.py  test_document_smoke.py  test_env_config.py  test_generic_parser.py  test_grade_registry.py  test_interactive_run_rc6.py  test_llm_enrichment.py  test_llm_pilot.py  test_llm_policy.py  test_llm_replay_validation.py  test_llm_result_reconciliation.py  test_llm_safe_pipeline.py  test_mail_workflow.py  test_nomenclature_adapter.py  test_nomenclature_catalog.py  test_nomenclature_search.py  test_normalization.py  test_operator_review.py  test_profile_business_rules.py  test_query_normalization.py  test_rc14_core_reconciliation.py  test_search_optional_grade.py  test_v021_rules.py  test_v022_rules.py  test_v032_rules.py
tools/: backend_smoke_v0_5_0_rc1.py  document_smoke_v0_7_0_rc2.py  mail_smoke_v0_6_0_rc1.py  replay_llm_smoke_v0_2_4.py
(+70 files in other folders)
